# nanogpt-uniprot

./: .gitignore  README.md  pyproject.toml  run.sh
src/nanogpt_uniprot/: train.py  train_gpt2.py
src/nanogpt_uniprot/data/: cached_fineweb10B.py
src/nanogpt_uniprot/networks/: gpt2.py
src/nanogpt_uniprot/utils/: data.py
