[project]
name = "nanogpt-uniprot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Gregory Johnson", email = "gregjohnso@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.2",
    "torch>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
