[project]
name = "nanogpt-uniprot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Gregory Johnson", email = "gregjohnso@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.1",
    "huggingface-hub>=0.25.2",
    "numpy>=2.1.2",
    "ruff>=0.7.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.0",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
